@@ -293,6 +293,10 @@ GTKHS_PKG_CHECK(cairo, cairo, CAIRO, [cairo >= 1.0.0],
 	[build bindings for the cairo vector graphics system (default=auto)],
 	[cairo requirement not met. Perhaps you need to install cairo or cairo-devel])
 
+GTKHS_PKG_CHECK(svg-cairo, svgcairo, SVGCAIRO, [libsvg-cairo >= 0.1.4],
+	[build bindings for the cairo svg extension (default=auto)],
+	[libsvg-cairo requirement not met. Perhaps you need to install libsvg-cairo or libsvg-cairo-devel])
+
 GTKHS_PKG_CHECK(opengl, gtkglext, GTKGLEXT, [gtkglext-1.0 >= 1.0.5],
  	[build bindings for the Gtk OpenGL extension (default=auto)],
  	[GtkGLExt library requirement not met. Perhaps you need to install gtkglext or gtkglext-devel])
@@ -427,6 +431,9 @@ GTKHS_PACKAGE_FILTER_LIBS([MOZEMBED_LIBS], [$GLIB_LIBS $GTK_LIBS], [$MOZEMBED_LI
 GTKHS_PACKAGE_FILTER_CFLAGS([CAIRO_CFLAGS], [], [$CAIRO_CFLAGS])
 GTKHS_PACKAGE_FILTER_LIBS([CAIRO_LIBS], [], [$CAIRO_LIBS])
 
+GTKHS_PACKAGE_FILTER_CFLAGS([SVGCAIRO_CFLAGS], [$CAIRO_CFLAGS], [$SVGCAIRO_CFLAGS])
+GTKHS_PACKAGE_FILTER_LIBS([SVGCAIRO_LIBS], [$CAIRO_LIBS], [$SVGCAIRO_LIBS])
+
 GTKHS_PACKAGE_FILTER_CFLAGS([GTKGLEXT_CFLAGS], [$GLIB_CFLAGS $GTK_CFLAGS], [$GTKGLEXT_CFLAGS])
 GTKHS_PACKAGE_FILTER_LIBS([GTKGLEXT_LIBS], [$GLIB_LIBS $GTK_LIBS], [$GTKGLEXT_LIBS])
 
@@ -487,6 +494,13 @@ AC_SUBST(CAIRO_CFLAGS_CQ)
 AC_SUBST(CAIRO_LIBS_CQ)
 AC_SUBST(CAIRO_LIBDIR_CQ)
 AC_SUBST(CAIRO_LIBEXTRA_CQ)
+
+GTKHS_REFORMAT_PACKAGE_CFLAGS(SVGCAIRO_CFLAGS, SVGCAIRO_CFLAGS_CQ)
+GTKHS_REFORMAT_PACKAGE_LIBS(SVGCAIRO_LIBS, SVGCAIRO_LIBS_CQ, SVGCAIRO_LIBDIR_CQ, SVGCAIRO_LIBEXTRA_CQ)
+AC_SUBST(SVGCAIRO_CFLAGS_CQ)
+AC_SUBST(SVGCAIRO_LIBS_CQ)
+AC_SUBST(SVGCAIRO_LIBDIR_CQ)
+AC_SUBST(SVGCAIRO_LIBEXTRA_CQ)
 
 GTKHS_REFORMAT_PACKAGE_CFLAGS(GTKGLEXT_CFLAGS, GTKGLEXT_CFLAGS_CQ)
 GTKHS_REFORMAT_PACKAGE_LIBS(GTKGLEXT_LIBS, GTKGLEXT_LIBS_CQ, GTKGLEXT_LIBDIR_CQ, GTKGLEXT_LIBEXTRA_CQ)
@@ -778,6 +792,10 @@ AC_CONFIG_FILES([
   cairo/cairo.pkg
   cairo/cairo.package.conf
   cairo/cairo.cabal
+
+  svgcairo/svgcairo.pkg
+  svgcairo/svgcairo.package.conf
+  svgcairo/svgcairo.cabal
 
   gtkglext/gtkglext.pkg
   gtkglext/gtkglext.package.conf
