@@ -1,0 +1,19 @@
+name: svgcairo
+version: @PACKAGE_VERSION@
+license: BSD3
+license-file: cairo/COPYRIGHT
+copyright: (c) Duncan Coutts 2005, (c) Paolo Martini 2005
+author: Duncan Coutts, Paolo Martini
+maintainer: gtk2hs-devel@lists.sourceforge.net
+stability: provisional
+homepage: http://haskell.org/gtk2hs/
+exposed: True
+exposed-modules: ${modules}
+import-dirs: "@hidir@/svgcairo"
+library-dirs: @SVGCAIRO_LIBDIR_CQ@
+hs-libraries: HSsvgcairo
+extra-libraries: @SVGCAIRO_LIBS_CQ@
+include-dirs: @SVGCAIRO_CFLAGS_CQ@
+includes: svg-cairo.h
+depends: haskell98 mtl glib-@PACKAGE_VERSION@ cairo-@PACKAGE_VERSION@
+ld-options: @SVGCAIRO_LIBEXTRA_CQ@
